--- a/index.html
+++ b/index.html
@@ -8,88 +8,127 @@
   <title>Move my bike</title>
   <!-- nombre de la pestana -->
 
-  <link rel="shortcut icon" href="multimedia/logobici.jpeg" />
+  <link rel="shortcut icon" href="multimedia/logobici.png" />
   <!-- logo pagina favicon -->
 
+  <!-- links bootstap  -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+
+
+  <!--------ESLILOS PROPIOS CSS------>
   <link rel="stylesheet" href="css/estilos.css" />
 </head>
 
-<body id="inicio">
+<body class="container-fluid">
 
-  <header>
+  <div class="Header">
+    <header class="logoinicial row">
 
-    <div class="logoinicial">
-      <img src="multimedia/logobici.png" alt="Logo Bicicleta" title="Move by Bike" class="logo" width="400"
-        height="200" />
-      <!-- imagen logo -->
-    </div>
+      <img src="multimedia/logobici.png" alt="LogoBici" title="LogoPrincipal" class="logo" />
 
-  </header>
+      <div class="titulo_logo row">
+        <div class="container-text-left">
+          <div class="row justify-content-start">
+            <p>Move my Bike </p>
+          </div>
+        </div>
+      </div>
 
-  <main>
+    </header>
+  </div>
 
-    <ul class="menu">
+  <div class="Nav">
+    <nav class="menu justify-content">
+
       <!-- lista inicio -->
-      <li><a href="coder/index.html">Inicio</a></li>
-      <li><a href="paginas/ciclovias.html">Ciclo Vias</a></li>
-      <li><a href="paginas/paseos.html">Paseos</a></li>
-      <li><a href="paginas/acercadeventaarticulos.html">Acerca de Venta Articulos</a></li>
-      <li><a href="paginas/contacto.html">Contacto</a></li>
-    </ul>
 
-  </main>
+      <div class="container text-center">
+        <div class="row justify-content-start">
 
-  <section class="contenido">
+          <ul>
+            <li><a href="coder/index.html">Inicio</a></li>
+            <li><a href="paginas/ciclovias.html">Ciclo Vias</a></li>
+            <li><a href="paginas/paseos.html">Paseos</a></li>
+            <li><a href="paginas/acercadeventaarticulos.html">Acerca de Venta Articulos</a></li>
+            <li><a href="paginas/contacto.html">Contacto</a></li>
+          </ul>
 
-    <h1>"Move my Bike: Explora la ciudad en bicicleta"</h1>
+        </div>
+      </div>
 
-    <p>
-    ¡Bienvenidos a la presentación de la página web "Move my Bike"! Una plataforma dedicada a los amantes del
-      ciclismo y los paseos en bicicleta por distintos puntos de la ciudad. En esta presentación, exploraremos las
-      características y beneficios de esta página web, que ofrece una emocionante experiencia de ciclismo urbano.
-    </p>
+    </nav>
+  </div>
 
-  </section>
+  <div class="Main">
+    <main>
+      <section class="contenido row">
 
-  <section>
+        <div class="encabezado_titulo">
+          <div class="container text-center">
+            <h1>Move my Bike: Explora la ciudad en bicicleta</h1>
+          </div>
+        </div>
 
-    <article>
-      <img src="multimedia/DALL·E 2023-03-29 23.20.12 - people taking a bike ride with sky background.png"
-        alt="Imagen paseo en Bicicleta" title="Paseo en bicicleta" width="1518" height="700">
-    </article>
+        <div class="parrafo_contenido">
+          <div class="container text-center">
+            <p>
+              ¡Bienvenidos a la presentación de la página web "Move my Bike"! Una plataforma dedicada a los amantes del
+              ciclismo y los paseos en bicicleta por distintos puntos de la ciudad. En esta presentación, exploraremos
+              las
+              características y beneficios de esta página web, que ofrece una emocionante experiencia de ciclismo
+              urbano.
+            </p>
+          </div>
+        </div>
 
-  </section>
+        <div class="imagen_prinicipal">
+          <img src="multimedia/imagenindex.jpg" alt="Imagen paseo en Bicicleta" title="Paseo en bicicleta"
+            width="1520px" height="1000px">
+        </div>
 
-  <footer>
+      </section>
+    </main>
+  </div>
 
-    <div class="final">
-      <p>Creado por Alvin Godoy</p>
-      <p>
-        Copyright 2023©
-      </p>
-    </div>
+  <div class="Footer">
+    <footer>
 
-    <div class="logoslinks">
-      <a href="http://google.com" target="_blank" rel="noopener noreferrer"></a>
-      <a href="https://twitter.com/?lang=es"><img src="multimedia/TW.png" alt="Logo twitter" width="70" height="70"></a>
-      <a href="https://es-la.facebook.com/"> <img src="multimedia/FB.png" alt=Logo Facebook" width="70" height="70"></a>
-      <a href="https://www.instagram.com/"> <img src="multimedia/insta.png" alt="Logo instagram" width="70"
-          height="70"></a>
-      <!-- Links de fuentes, copiados google fonts -->
-    </div>
+      <div class="container text-center">
+        <p>Creado por Alvin Godoy</p>
+        <p>
+          Copyright 2023©
+        </p>
+      </div>
 
+      <div class="redes_sociales">
+        <div class="container container text-center">
+          <a href="http://google.com" target="_blank" rel="noopener noreferrer"></a>
+          <a href="https://twitter.com/?lang=es"><img src="multimedia/TW.png" alt="Logo twitter" width=""
+              height="70"></a>
+          <a href="https://es-la.facebook.com/"> <img src="multimedia/FB.png" alt=Logo Facebook" width=""
+              height="70"></a>
+          <a href="https://www.instagram.com/"> <img src="multimedia/insta.png" alt="Logo instagram" width=""
+              height="70"></a>
+          <!-- Links de fuentes, copiados google fonts -->
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+          <link rel="preconnect" href="https://fonts.googleapis.com">
+          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+          <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Sedgwick+Ave+Display&display=swap"
-      rel="stylesheet">
+          <link rel="preconnect" href="https://fonts.googleapis.com">
+          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+          <link
+            href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Sedgwick+Ave+Display&display=swap"
+            rel="stylesheet">
+        </div>
+      </div>
 
-  </footer>
+    </footer>
+  </div>
 
 </body>
 
