--- a/paginas/acercadeventaarticulos.html
+++ b/paginas/acercadeventaarticulos.html
@@ -1,111 +1,154 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Acerca de venta de Articulos</title>
 
-  <link rel="shortcut icon" href="../multimedia/logobici.jpeg" type="image/x-icon" />
+  <title>Ciclo Vias</title>
 
-  <link rel="stylesheet" href="../css/estilos.css" />
+  <link rel="shortcut icon" href="../multimedia/logobici.png" />
+
+  <!-- logo pagina favicon -->
+
+  <!-- links bootstap  -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+
+
+  <!--------ESLILOS PROPIOS CSS------>
+  <link rel="stylesheet" href="../css/styles.css" />
+
+  <!-- -------animaciones----- -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
 </head>
 
-<body id="inicio">
+<body class="contenedor_venta">
 
-  <header>
+  <div class="Header">
+    <header>
 
-    <div class="logoinicial">
-      <img src="../multimedia/logobici.png" alt="Logo Bicicleta" title="Move by Bike" class="logo" width="400"
-        height="200" />
-    </div>
+      <img src="../multimedia/logobici.png" alt="LogoBici" title="LogoPrincipal"
+        class="logo animate__animated animate__backInLeft" />
 
-  </header>
+      <div class="titulo_logo">
+        <p class="logo animate__animated animate__zoomIn">Move my Bike </p>
+      </div>
 
-  <main>
+    </header>
+  </div>
 
-    <ul class="menu">
-      <li><a href="../index.html">Inicio</a></li>
-      <li><a href="../paginas/ciclovias.html">Ciclo Vias</a></li>
-      <li><a href="../paginas/paseos.html">Paseos</a></li>
-      <li>
-        <a href="paginas/acercadeventaarticulos.html">Acerca de Venta Articulos</a>
-      </li>
-      <li><a href="../paginas/contacto.html">Contacto</a></li>
-    </ul>
+  <div class="Nav">
+    <nav class="menu justify-content">
 
-    <div>
+      <!-- lista inicio -->
 
-      <section class="contenido">
+      <div class="container text-center">
+        <div class="row justify-content-start">
 
-        <h1>Puntos de ventas accesorios y repuestos para tu bicicleta</h1>
+          <ul>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="../paginas/ciclovias.html">Ciclo Vias</a></li>
+            <li><a href="../paginas/paseos.html">Paseos</a></li>
+            <li><a href="paginas/acercadeventaarticulos.html">Acerca de Ventas Articulos</a></li>
+            <li><a href="../paginas/contacto.html">Contacto</a></li>
+          </ul>
 
-        <div>
+        </div>
+      </div>
 
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque nihil voluptates voluptatum harum nobis
-            quia
-            reprehenderit animi at natus repudiandae inventore libero voluptatem, commodi dicta rem illo totam porro
-            delenitin.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque nihil voluptates voluptatum harum nobis
-            quia
-            reprehenderit animi at natus repudiandae inventore libero voluptatem, commodi dicta rem illo totam porro
-            delenitin.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque nihil voluptates voluptatum harum nobis
-            quia
-            reprehenderit animi at natus repudiandae inventore libero voluptatem, commodi dicta rem illo totam porro
-            delenitin.
-          </p>
+    </nav>
+  </div>
 
+  <div class="main_ventas">
+    <main>
+      <section class="contenido row">
+
+        <div class="encabezado_titulo">
+          <div class="container text-center">
+            <h1>Puntos de ventas accesorios y repuestos para tu bicicleta</h1>
+          </div>
+        </div>
+
+        <div class="parrafo_ventas">
+          <div class="container text-center">
+            <p>Bicicletería Bellini - Av. Rivera 3368, Carrasco, Montevideo</p>
+
+            <p>Bicicletería Tinkuy - Av. 18 de Julio 1730, Centro,Montevideo</p>
+
+            <p>Bicicletería Veloce - Luis de la Torre 1023, Malvín, Montevideo</p>
+
+            <p>Garage - Av. Italia 2236, La Blanqueada, Montevideo</p>
+
+            <p>BiciArte - Canelones 1809, Centro, Montevideo</p>
+
+            <p>Bicicletería Ciclos - Av. Millán 4555, Sayago, Montevideo</p>
+
+            <p>Almacén de Bicicletas - Ejido 1421, Centro, Montevideo</p>
+
+            <p>BiciSur: Se encuentra en la calle 21 de Setiembre 2630, entre Ellauri y Berro.</p>
+
+            <p>La Rosadita: Está ubicada en la calle Gonzalo Ramírez 1830, entre Guaná y Barrios Amorín.</p>
+
+            <p>La Ciudadela: Está ubicada en la calle Durazno 1780, entre Colonia y Mercedes.</p>
+
+            <p>Bici Centro: Se encuentra en la calle Av. Millán 4141, esquina Av. Lezica.</p>
+          </div>
         </div>
 
       </section>
+    </main>
+  </div>
 
-      <section>
-        <img src="../multimedia/ventaarticulos.jpg" alt="Imagen ilustrativa bicicleta" width="450" height="400">
+<div class="mapa_ventas">
+      <iframe src="https://www.google.com/maps/d/embed?mid=1lDoxPneVj6DMtHdRSCESNz5o17mtX-Cq&ehbc=2E312F" width="450"
+        height="400"></iframe>
+  </div>
 
-        <iframe src="https://www.google.com/maps/d/embed?mid=1lDoxPneVj6DMtHdRSCESNz5o17mtX-Cq&ehbc=2E312F" width="450"
-          height="400"></iframe>
-      </section>
+  <div class="imagen_ventas">
+      <img src="../multimedia/ventaarticulos.jpg" alt="Imagen ilustrativa bicicleta" width="450" height="400">
+  </div>
 
-    </div>
-  </main>
+  <div class="Footer">
+    <footer>
 
+      <div class="container text-center">
+        <p>Creado por Alvin Godoy</p>
+        <p>
+          Copyright 2023©
+        </p>
+      </div>
 
-  <footer>
+      <div class="redes_sociales">
+        <div class="container container text-center">
+          <a href="http://google.com" target="_blank" rel="noopener noreferrer"></a>
+          <a href="https://twitter.com/?lang=es"><img src="../multimedia/TW.png" alt="Logo twitter" width=""
+              height="70"></a>
+          <a href="https://es-la.facebook.com/"> <img src="../multimedia/FB.png" alt=Logo Facebook" width=""
+              height="70"></a>
+          <a href="https://www.instagram.com/"> <img src="../multimedia/insta.png" alt="Logo instagram" width=""
+              height="70"></a>
+          <!-- Links de fuentes, copiados google fonts -->
 
-    <div class="final">
-      <p>Creado por Alvin Godoy</p>
-      <p>Copyright 2023©</p>
-    </div>
+          <link rel="preconnect" href="https://fonts.googleapis.com">
+          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+          <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
 
-    <div class="logoslinks">
-      <a href="http://google.com" target="_blank" rel="noopener noreferrer"></a>
-      <a href="https://twitter.com/?lang=es"><img src="../multimedia/TW.png" alt="Logo twitter" width="70"
-          height="70"></a>
-      <a href="https://es-la.facebook.com/"> <img src="../multimedia/FB.png" alt=Logo Facebook" width="70"
-          height="70"></a>
-      <a href="https://www.instagram.com/"> <img src="../multimedia/insta.png" alt="Logo instagram" width="70"
-          height="70"></a>
-      <!-- Links de fuentes, copiados google fonts -->
-    </div>
+          <link rel="preconnect" href="https://fonts.googleapis.com">
+          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+          <link
+            href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Sedgwick+Ave+Display&display=swap"
+            rel="stylesheet">
+        </div>
+      </div>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Sedgwick+Ave+Display&display=swap"
-      rel="stylesheet">
-
-  </footer>
+    </footer>
+  </div>
 
 </body>
 
