--- a/paginas/ciclovias.html
+++ b/paginas/ciclovias.html
@@ -8,124 +8,161 @@
 
   <title>Ciclo Vias</title>
 
-  <link rel="shortcut icon" href="../multimedia/logobici.jpeg" />
+  <link rel="shortcut icon" href="../multimedia/logobici.png" />
 
-  <link rel="stylesheet" href="../css/estilos.css" />
+  <!-- logo pagina favicon -->
+
+  <!-- links bootstap  -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+
+
+  <!--------ESLILOS PROPIOS CSS------>
+  <link rel="stylesheet" href="../css/styles.css" />
+
+
+  <!-- -------animaciones----- -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
 </head>
 
 <body>
 
   <div class="contenedorgrilla">
 
-    <header class="header">
+    <div class="Header">
+      <header>
 
-      <img src="../multimedia/logobici.png" alt="Logo Bicicleta" title="Move by Bike" class="logo" width="400"
-        height="200" />
-      <!-- imagen logo -->
+        <img src="../multimedia/logobici.png" alt="LogoBici" title="LogoPrincipal"
+          class="logo animate__animated animate__backInLeft" />
 
-    </header>
+        <div class="titulo_logo">
+          <p class="logo animate__animated animate__zoomIn">Move my Bike </p>
+        </div>
 
-    <nav class="nav">
-
-      <ul>
-
-        <li><a href="../index.html">Inicio</a></li>
-        <li><a href="paginas/ciclovias.html">Ciclo Vias</a></li>
-        <li><a href="../paginas/paseos.html">Paseos</a></li>
-        <li>
-          <a href="../paginas/acercadeventaarticulos.html">Acerca de Venta Articulos</a>
-        </li>
-        <li><a href="../paginas/contacto.html">Contacto</a></li>
-
-      </ul>
-
-    </nav>
-
-    <main class="info">
-
-      <div>
-
-        <section class="contenido">
-
-          <p>
-            Montevideo, la capital de Uruguay, cuenta con una red de ciclovías que se ha ido desarrollando en los
-            últimos
-            años como parte de un plan de fomento de la movilidad sostenible y la promoción del uso de la bicicleta
-            como
-            medio de transporte. Algunas de las zonas donde puedes encontrar ciclovías en Montevideo son:
-          </p>
-
-          <p>
-            Rambla: La rambla de Montevideo es una avenida costera que rodea gran parte de la ciudad y cuenta con una
-            ciclovía separada del tráfico vehicular. Es una de las áreas más populares para andar en bicicleta en
-            Montevideo, ya que ofrece un hermoso paisaje costero.
-          </p>
-
-          <p>
-            Parques: Varios parques de Montevideo, como el Parque Rodó y el Parque Rivera, tienen ciclovías internas
-            que
-            te permiten recorrerlos en bicicleta y disfrutar de áreas verdes.
-          </p>
-
-          <p>
-            Avenidas principales: Algunas de las avenidas principales de Montevideo, como la Avenida 18 de Julio y la
-            Avenida Rivera, cuentan con carriles exclusivos para bicicletas o ciclovías, que te permiten desplazarte
-            en
-            bicicleta de manera segura.
-          </p>
-
-          <p>
-            Barrios residenciales: En algunos barrios residenciales de Montevideo, como Pocitos y Punta Carretas, se
-            han
-            instalado ciclovías en calles secundarias o en áreas de recreación para fomentar el uso de la bicicleta
-            como
-            medio de transporte local.
-          </p>
-
-        </section>
-
-      </div>
-
-    </main>
-
-    <div class="mapa">
-
-      <section class="maps">
-
-        <iframe src="https://www.google.com/maps/d/embed?mid=1lDoxPneVj6DMtHdRSCESNz5o17mtX-Cq&ehbc=2E312F" width="500"
-          height="580"></iframe>
-
-      </section>
-
+      </header>
     </div>
 
+    <div class="Nav">
+      <nav class="menu justify-content">
 
-    <footer class="footer">
+        <!-- lista inicio -->
 
-      <p>Creado por Alvin Godoy</p>
-      <p>Copyright 2023©</p>
+        <div class="container text-center">
+          <div class="row justify-content-start">
 
-      <a href="http://google.com" target="_blank" rel="noopener noreferrer"></a>
-      <a href="https://twitter.com/?lang=es"><img src="../multimedia/TW.png" alt="Logo twitter" width="70"
-          height="70"></a>
-      <a href="https://es-la.facebook.com/"> <img src="../multimedia/FB.png" alt=Logo Facebook" width="70"
-          height="70"></a>
-      <a href="https://www.instagram.com/"> <img src="../multimedia/insta.png" alt="Logo instagram" width="70"
-          height="70"></a>
-      <!-- imagenes para logos rs -->
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+            <ul>
+              <li><a href="../index.html">Inicio</a></li>
+              <li><a href="paginas/ciclovias.html">Ciclo Vias</a></li>
+              <li><a href="../paginas/paseos.html">Paseos</a></li>
+              <li><a href="../paginas/acercadeventaarticulos.html">Acerca de Ventas Articulos</a></li>
+              <li><a href="../paginas/contacto.html">Contacto</a></li>
+            </ul>
 
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link
-        href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Sedgwick+Ave+Display&display=swap"
-        rel="stylesheet"> <!-- Links de fuentes, copiados google fonts -->
+          </div>
+        </div>
+      </nav>
+    </div>
 
-    </footer>
+    <div class="mainciclovias">
+      <main>
+        <section>
 
-  </div>
+          <div class="encabezado_ciclo">
+            <div class="container text-center">
+              <h1>Lugares que puedes visitar</h1>
+            </div>
+          </div>
+
+          <div class="parrafo_ciclo">
+            <div class="container text-center">
+              <p>
+                Montevideo, la capital de Uruguay, cuenta con una red de ciclovías que se ha ido desarrollando en los
+                últimos
+                años como parte de un plan de fomento de la movilidad sostenible y la promoción del uso de la bicicleta
+                como
+                medio de transporte. Algunas de las zonas donde puedes encontrar ciclovías en Montevideo son:
+              </p>
+
+              <p>
+                Rambla: La rambla de Montevideo es una avenida costera que rodea gran parte de la ciudad y cuenta con
+                una
+                ciclovía separada del tráfico vehicular. Es una de las áreas más populares para andar en bicicleta en
+                Montevideo, ya que ofrece un hermoso paisaje costero.
+              </p>
+
+              <p>
+                Parques: Varios parques de Montevideo, como el Parque Rodó y el Parque Rivera, tienen ciclovías internas
+                que
+                te permiten recorrerlos en bicicleta y disfrutar de áreas verdes.
+              </p>
+
+              <p>
+                Avenidas principales: Algunas de las avenidas principales de Montevideo, como la Avenida 18 de Julio y
+                la
+                Avenida Rivera, cuentan con carriles exclusivos para bicicletas o ciclovías, que te permiten desplazarte
+                en
+                bicicleta de manera segura.
+              </p>
+
+              <p>
+                Barrios residenciales: En algunos barrios residenciales de Montevideo, como Pocitos y Punta Carretas, se
+                han
+                instalado ciclovías en calles secundarias o en áreas de recreación para fomentar el uso de la bicicleta
+                como
+                medio de transporte local.
+              </p>
+            </div>
+        </section>
+      </main>
+    </div>
+
+    <div class="mapa">
+      <section>
+
+        <iframe src="https://www.google.com/maps/d/embed?mid=1lDoxPneVj6DMtHdRSCESNz5o17mtX-Cq&ehbc=2E312F" width="580" height="400"></iframe>
+
+      </section>
+    </div>
+
+    <div class="Footer">
+      <footer>
+
+        <div class="parrafo_copy">
+          <p>Creado por Alvin Godoy</p>
+          <p>
+            Copyright 2023©
+          </p>
+        </div>
+
+        <div class="redes_sociales">
+          <div class="container container text-center">
+            <a href="http://google.com" target="_blank" rel="noopener noreferrer"></a>
+            <a href="https://twitter.com/?lang=es"><img src="../multimedia/TW.png" alt="Logo twitter" width=""
+                height="70"></a>
+            <a href="https://es-la.facebook.com/"> <img src="../multimedia/FB.png" alt=Logo Facebook" width=""
+                height="70"></a>
+            <a href="https://www.instagram.com/"> <img src="../multimedia/insta.png" alt="Logo instagram" width=""
+                height="70"></a>
+            <!-- Links de fuentes, copiados google fonts -->
+
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link
+              href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Sedgwick+Ave+Display&display=swap"
+              rel="stylesheet">
+          </div>
+        </div>
+
+      </footer>
+    </div>
 
 </body>
 
