--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -5,107 +5,134 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contacto</title>
 
-  <link rel="shortcut icon" href="../multimedia/logobici.jpeg" />
+  <title>Ciclo Vias</title>
 
-  <link rel="stylesheet" href="../css/estilos.css" />
+  <link rel="shortcut icon" href="../multimedia/logobici.png" />
+
+  <!-- logo pagina favicon -->
+
+  <!-- links bootstap  -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+
+
+  <!--------ESLILOS PROPIOS CSS------>
+  <link rel="stylesheet" href="../css/styles.css" />
+
+  <!-- -------animaciones----- -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
 </head>
 
-<body id="inicio">
-  <header>
 
+<body class="contenedo_contacto">
 
-    <div class="logoinicial">
-      <img src="../multimedia/logobici.png" alt="Logo Bicicleta" title="Move by Bike" class="logo" width="400"
-        height="200" />
-      <!-- imagen logo -->
-    </div>
+  <div class="Header">
+    <header>
 
-  </header>
+      <img src="../multimedia/logobici.png" alt="LogoBici" title="LogoPrincipal"
+        class="logo animate__animated animate__backInLeft" />
 
-  <main>
-    <ul class="menu">
-      <li><a href="../index.html">Inicio</a></li>
-      <li><a href="../paginas/ciclovias.html">Ciclo Vias</a></li>
-      <li><a href="../paginas/paseos.html">Paseos</a></li>
-      <li>
-        <a href="../paginas/acercadeventaarticulos.html">Acerca de Venta Articulos</a>
-      </li>
-      <li><a href="paginas/contacto.html">Contacto</a></li>
-    </ul>
+      <div class="titulo_logo">
+            <p class="logo animate__animated animate__zoomIn">Move my Bike </p>
+          </div>
+      
+    </header>
+  </div>
 
-    <section  class="contenido">
-      <img src="../multimedia/contacto.avif" alt="Imagen ilustrativa">
-    </section>
+  <div class="Nav">
+    <nav class="menu justify-content">
 
+      <!-- lista inicio -->
+
+      <div class="container text-center">
+        <div class="row justify-content-start">
+
+          <ul>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="../paginas/ciclovias.html">Ciclo Vias</a></li>
+            <li><a href="../paginas/paseos.html">Paseos</a></li>
+            <li><a href="../paginas/acercadeventaarticulos.html">Acerca de Ventas Articulos</a></li>
+            <li><a href="paginas/contacto.html">Contacto</a></li>
+          </ul>
+
+        </div>
+      </div>
+
+    </nav>
+  </div>
+
+  <div class="main_contacto">
+    <main>
+      <section class="contacto row">
+        <img src="../multimedia/contacto.avif" alt="Imagen ilustrativa">
+      </section>
+    </main>
+  </div>
+
+  <div>
+
+    <div class=" formulario">
       <h1 class="contenido">Cuentanos tu experiencia</h1>
 
-  </main>
-
-  <form>
-
-    <div>
-      <p><label for="nombres"> Nombre
-        </label>
-        <input type="text" name="nombres" />
-      </p>
-    </div>
-
-    <div>
-
-      <p>
-        <label for="apellidos"> Apellido
-        </label>
-        <input type="text" name="apellidos" />
-      </p>
+      <form class="forms">
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Dirección de correo electrónico</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">Nunca compartiremos tu correo electrónico con nadie más.</div>
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Casilla de sugerencias</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Seleccionar</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+      </form>
 
     </div>
 
-    <div>
+    <div class="Footer">
+      <footer>
 
-      <p><label for="correo"> Correo
-        </label>
-        <input type="email" name="correo" />
-      </p>
+        <div class="container text-center">
+          <p>Creado por Alvin Godoy</p>
+          <p>
+            Copyright 2023©
+          </p>
+        </div>
 
+        <div class="redes_sociales">
+          <div class="container container text-center">
+            <a href="http://google.com" target="_blank" rel="noopener noreferrer"></a>
+            <a href="https://twitter.com/?lang=es"><img src="../multimedia/TW.png" alt="Logo twitter" width=""
+                height="70"></a>
+            <a href="https://es-la.facebook.com/"> <img src="../multimedia/FB.png" alt=Logo Facebook" width=""
+                height="70"></a>
+            <a href="https://www.instagram.com/"> <img src="../multimedia/insta.png" alt="Logo instagram" width=""
+                height="70"></a>
+            <!-- Links de fuentes, copiados google fonts -->
+
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link
+              href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Sedgwick+Ave+Display&display=swap"
+              rel="stylesheet">
+          </div>
+        </div>
+
+      </footer>
     </div>
-
-    <label for="mensaje"> Dejanos tu comentario</label>
-    <textarea name="mensaje" cols="50" rows="5"></textarea>
-
-  </form>
-
-  </section>
-
-  <footer>
-    <div class="final">
-      <p>Creado por Alvin Godoy</p>
-      <p>Copyright 2023©</p>
-    </div>
-
-    <div class="logoslinks">
-      <a href="http://google.com" target="_blank" rel="noopener noreferrer"></a>
-      <a href="https://twitter.com/?lang=es"><img src="../multimedia/TW.png" alt="Logo twitter" width="70"
-          height="70"></a>
-      <a href="https://es-la.facebook.com/"> <img src="../multimedia/FB.png" alt=Logo Facebook" width="70"
-          height="70"></a>
-      <a href="https://www.instagram.com/"> <img src="../multimedia/insta.png" alt="Logo instagram" width="70"
-          height="70"></a>
-      <!-- Links de fuentes, copiados google fonts -->
-    </div>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Sedgwick+Ave+Display&display=swap"
-      rel="stylesheet">
-
-  </footer>
 
 </body>
 
