--- a/index.html
+++ b/index.html
@@ -21,12 +21,9 @@
 
   <!--------ESLILOS PROPIOS CSS------>
   <link rel="stylesheet" href="css/styles.css" />
-  
+
   <!-- -------animaciones----- -->
-  <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body class="contenedorindex">
@@ -34,35 +31,53 @@
   <div class="Header">
     <header>
 
-      <img src="multimedia/logobici.png" alt="LogoBici" title="LogoPrincipal" class="logo animate__animated animate__backInLeft" />
+      <img src="multimedia/logobici.png" alt="LogoBici" title="LogoPrincipal"
+        class="logo animate__animated animate__backInLeft" />
 
       <div class="titulo_logo">
-            <p class="animate__animated animate__zoomIn">Move my Bike </p>
+        <p class="animate__animated animate__zoomIn">Move my Bike </p>
       </div>
 
     </header>
   </div>
 
   <div class="Nav">
-    <nav class="menu justify-content">
 
-      <!-- lista inicio -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <button class="navbar-toggler mx-auto" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+          aria-label="Toggle navigation">
+          Menu
+          <span class="navbar-toggler-icon "></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="paginas/ciclovias.html">Ciclo Vias</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="paginas/paseos.html">Paseos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="paginas/acercadeventaarticulos.html">Acerca de Ventas Articulos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="paginas/contacto.html">Contacto</a>
+            </li>
 
-      <div class="container text-center">
-        <div class="row justify-content-start">
-
-          <ul>
-            <li><a href="coder/index.html">Inicio</a></li>
-            <li><a href="paginas/ciclovias.html">Ciclo Vias</a></li>
-            <li><a href="paginas/paseos.html">Paseos</a></li>
-            <li><a href="paginas/acercadeventaarticulos.html">Acerca de Ventas Articulos</a></li>
-            <li><a href="paginas/contacto.html">Contacto</a></li>
           </ul>
-
+          <form class="d-flex" role="search">
+            <input class="form-control mx-0" type="search" placeholder="Buscador" aria-label="Buscador">
+            <button class="btn btn-outline-success mx-3" type="submit">Buscar</button>
+          </form>
         </div>
       </div>
-
     </nav>
+
   </div>
 
   <div class="Main">
@@ -78,20 +93,19 @@
         <div class="parrafo_contenido">
           <div class="container text-center">
             <p>
-              ¡Bienvenidos a la presentación de la página web "Move my Bike"! Una plataforma dedicada a los amantes
+              ¡Bienvenidos a "Move my Bike"! Una pagina dedicada a los amantes
               del
-              ciclismo y los paseos en bicicleta por distintos puntos de la ciudad. En esta presentación,
-              exploraremos
+              ciclismo y paseos en bicicleta por distintos puntos de la ciudad. Aqui podras explorar
               las
-              características y beneficios de esta página web, que ofrece una emocionante experiencia de ciclismo
+              características y beneficios para obtener una emocionante experiencia de ciclismo
               urbano.
             </p>
           </div>
         </div>
 
-        <div class="imagen_prinicipal">
+        <div class="img_index">
           <img src="multimedia/imagenindex.jpg" class="img-fluid" alt="Imagen paseo en Bicicleta"
-            title="Paseo en bicicleta" width="500px" height="1000px">
+            title="Paseo en bicicleta" width="600px">
         </div>
 
       </section>
@@ -100,36 +114,30 @@
 
   <div class="Footer">
     <footer>
+      <p>Creado por Alvin Godoy</p>
+      <p>
+        Copyright 2023©
+      </p>
 
-      <div class="container text-center">
-        <p>Creado por Alvin Godoy</p>
-        <p>
-          Copyright 2023©
-        </p>
-      </div>
+  <div class="redes_sociales">
+    <a href="http://google.com" target="_blank" rel="noopener noreferrer"></a>
+    <a href="https://twitter.com/?lang=es"><img src="multimedia/TW.png" alt="Logo twitter" width="" height="70"></a>
+    <a href="https://es-la.facebook.com/"> <img src="multimedia/FB.png" alt=Logo Facebook" width="" height="70"></a>
+    <a href="https://www.instagram.com/"> <img src="multimedia/insta.png" alt="Logo instagram" width="" height="70"></a>
+    <!-- Links de fuentes, copiados google fonts -->
 
-      <div class="redes_sociales">
-          <a href="http://google.com" target="_blank" rel="noopener noreferrer"></a>
-          <a href="https://twitter.com/?lang=es"><img src="multimedia/TW.png" alt="Logo twitter" width=""
-              height="70"></a>
-          <a href="https://es-la.facebook.com/"> <img src="multimedia/FB.png" alt=Logo Facebook" width=""
-              height="70"></a>
-          <a href="https://www.instagram.com/"> <img src="multimedia/insta.png" alt="Logo instagram" width=""
-              height="70"></a>
-          <!-- Links de fuentes, copiados google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
 
-          <link rel="preconnect" href="https://fonts.googleapis.com">
-          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-          <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Sedgwick+Ave+Display&display=swap"
+      rel="stylesheet">
+  </div>
 
-          <link rel="preconnect" href="https://fonts.googleapis.com">
-          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-          <link
-            href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Sedgwick+Ave+Display&display=swap"
-            rel="stylesheet">
-        </div>
-
-    </footer>
+  </footer>
   </div>
 
 </body>
