--- a/paginas/acercadeventaarticulos.html
+++ b/paginas/acercadeventaarticulos.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Ciclo Vias</title>
+  <title>Venta de articulos</title>
 
   <link rel="shortcut icon" href="../multimedia/logobici.png" />
 
@@ -44,111 +44,153 @@
   </div>
 
   <div class="Nav">
-    <nav class="menu justify-content">
 
-      <!-- lista inicio -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <button class="navbar-toggler mx-auto" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+          aria-label="Toggle navigation">
+          Menu
+          <span class="navbar-toggler-icon "></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/ciclovias.html">Ciclo Vias</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/paseos.html">Paseos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/acercadeventaarticulos.html">Acerca de Ventas Articulos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/contacto.html">Contacto</a>
+            </li>
 
-      <div class="container text-center">
-        <div class="row justify-content-start">
-
-          <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="../paginas/ciclovias.html">Ciclo Vias</a></li>
-            <li><a href="../paginas/paseos.html">Paseos</a></li>
-            <li><a href="paginas/acercadeventaarticulos.html">Acerca de Ventas Articulos</a></li>
-            <li><a href="../paginas/contacto.html">Contacto</a></li>
           </ul>
-
+          <form class="d-flex" role="search">
+            <input class="form-control mx-0" type="search" placeholder="Buscador" aria-label="Buscador">
+            <button class="btn btn-outline-success mx-3" type="submit">Buscar</button>
+          </form>
         </div>
       </div>
-
     </nav>
+
   </div>
 
   <div class="main_ventas">
     <main>
-      <section class="contenido row">
+      <section>
 
         <div class="encabezado_titulo">
-          <div class="container text-center">
-            <h1>Puntos de ventas accesorios y repuestos para tu bicicleta</h1>
-          </div>
+          <h1>Puntos de ventas accesorios y repuestos para tu bicicleta</h1>
         </div>
 
         <div class="parrafo_ventas">
-          <div class="container text-center">
-            <p>Bicicletería Bellini - Av. Rivera 3368, Carrasco, Montevideo</p>
 
-            <p>Bicicletería Tinkuy - Av. 18 de Julio 1730, Centro,Montevideo</p>
+          <p>Direccion: Bicicletería Bellini - Av. Rivera 3368, Carrasco, Montevideo</p>
 
-            <p>Bicicletería Veloce - Luis de la Torre 1023, Malvín, Montevideo</p>
+          <p>Direccion: Bicicletería Tinkuy - Av. 18 de Julio 1730, Centro,Montevideo</p>
 
-            <p>Garage - Av. Italia 2236, La Blanqueada, Montevideo</p>
+          <p>Bicicletería Veloce - Luis de la Torre 1023, Malvín, Montevideo</p>
 
-            <p>BiciArte - Canelones 1809, Centro, Montevideo</p>
+          <p>Direccion: Garage - Av. Italia 2236, La Blanqueada, Montevideo</p>
 
-            <p>Bicicletería Ciclos - Av. Millán 4555, Sayago, Montevideo</p>
+          <p>Direccion: BiciArte - Canelones 1809, Centro, Montevideo</p>
 
-            <p>Almacén de Bicicletas - Ejido 1421, Centro, Montevideo</p>
+          <p>Direccion: Bicicletería Ciclos - Av. Millán 4555, Sayago, Montevideo</p>
 
-            <p>BiciSur: Se encuentra en la calle 21 de Setiembre 2630, entre Ellauri y Berro.</p>
+          <p>Direccion: Almacén de Bicicletas - Ejido 1421, Centro, Montevideo</p>
 
-            <p>La Rosadita: Está ubicada en la calle Gonzalo Ramírez 1830, entre Guaná y Barrios Amorín.</p>
+          <p>Direccion: BiciSur - Se encuentra en la calle 21 de Setiembre 2630, entre Ellauri y Berro.</p>
 
-            <p>La Ciudadela: Está ubicada en la calle Durazno 1780, entre Colonia y Mercedes.</p>
+          <p>Direccion: La Rosadita - Está ubicada en la calle Gonzalo Ramírez 1830, entre Guaná y Barrios Amorín.</p>
 
-            <p>Bici Centro: Se encuentra en la calle Av. Millán 4141, esquina Av. Lezica.</p>
-          </div>
+          <p>Direccion: La Ciudadela - Está ubicada en la calle Durazno 1780, entre Colonia y Mercedes.</p>
+
+          <p>Direccion: Bici Centro - Se encuentra en la calle Av. Millán 4141, esquina Av. Lezica.</p>
         </div>
 
       </section>
     </main>
   </div>
 
-<div class="mapa_ventas">
-      <iframe src="https://www.google.com/maps/d/embed?mid=1lDoxPneVj6DMtHdRSCESNz5o17mtX-Cq&ehbc=2E312F" width="450"
-        height="400"></iframe>
+  <div class="mapa_ventas">
+    <iframe src="https://www.google.com/maps/d/embed?mid=1lDoxPneVj6DMtHdRSCESNz5o17mtX-Cq&ehbc=2E312F" width="750"
+      height="445"></iframe>
   </div>
 
   <div class="imagen_ventas">
-      <img src="../multimedia/ventaarticulos.jpg" alt="Imagen ilustrativa bicicleta" width="450" height="400">
+    
+    <div id="carouselExampleIndicators" class="carousel slide">
+      <div class="carousel-indicators">
+        <button  type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../multimedia/ventaarticulos2.jpg" class="d-block" alt="imgventaarticulos">
+        </div>
+        <div class="carousel-item">
+          <img src="../multimedia/ventaarticulos3.jpg" class="d-block" alt="imgva">
+        </div>
+        <div class="carousel-item">
+          <img src="../multimedia/ventaarticulos.jpg" class="d-block" alt="imgva">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden"></span>
+      </button>
+    </div>
   </div>
 
   <div class="Footer">
     <footer>
 
-      <div class="container text-center">
-        <p>Creado por Alvin Godoy</p>
-        <p>
-          Copyright 2023©
-        </p>
-      </div>
+      <p>Creado por Alvin Godoy</p>
+      <p>
+        Copyright 2023©
+      </p>
 
       <div class="redes_sociales">
-        <div class="container container text-center">
-          <a href="http://google.com" target="_blank" rel="noopener noreferrer"></a>
-          <a href="https://twitter.com/?lang=es"><img src="../multimedia/TW.png" alt="Logo twitter" width=""
-              height="70"></a>
-          <a href="https://es-la.facebook.com/"> <img src="../multimedia/FB.png" alt=Logo Facebook" width=""
-              height="70"></a>
-          <a href="https://www.instagram.com/"> <img src="../multimedia/insta.png" alt="Logo instagram" width=""
-              height="70"></a>
-          <!-- Links de fuentes, copiados google fonts -->
+        <a href="http://google.com" target="_blank" rel="noopener noreferrer"></a>
+        <a href="https://twitter.com/?lang=es"><img src="../multimedia/TW.png" alt="Logo twitter" width=""
+            height="70"></a>
+        <a href="https://es-la.facebook.com/"> <img src="../multimedia/FB.png" alt=Logo Facebook" width=""
+            height="70"></a>
+        <a href="https://www.instagram.com/"> <img src="../multimedia/insta.png" alt="Logo instagram" width=""
+            height="70"></a>
+        <!-- Links de fuentes, copiados google fonts -->
 
-          <link rel="preconnect" href="https://fonts.googleapis.com">
-          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-          <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
 
-          <link rel="preconnect" href="https://fonts.googleapis.com">
-          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-          <link
-            href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Sedgwick+Ave+Display&display=swap"
-            rel="stylesheet">
-        </div>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+          href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Sedgwick+Ave+Display&display=swap"
+          rel="stylesheet">
       </div>
 
+
     </footer>
-  </div>
+    </div>
 
 </body>
 
