--- a/paginas/ciclovias.html
+++ b/paginas/ciclovias.html
@@ -46,25 +46,44 @@
       </header>
     </div>
 
+
     <div class="Nav">
-      <nav class="menu justify-content">
 
-        <!-- lista inicio -->
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <button class="navbar-toggler mx-auto" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            Menu
+            <span class="navbar-toggler-icon "></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../paginas/ciclovias.html">Ciclo Vias</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../paginas/paseos.html">Paseos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../paginas/acercadeventaarticulos.html">Acerca de Ventas Articulos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../paginas/contacto.html">Contacto</a>
+              </li>
 
-        <div class="container text-center">
-          <div class="row justify-content-start">
-
-            <ul>
-              <li><a href="../index.html">Inicio</a></li>
-              <li><a href="paginas/ciclovias.html">Ciclo Vias</a></li>
-              <li><a href="../paginas/paseos.html">Paseos</a></li>
-              <li><a href="../paginas/acercadeventaarticulos.html">Acerca de Ventas Articulos</a></li>
-              <li><a href="../paginas/contacto.html">Contacto</a></li>
             </ul>
-
+            <form class="d-flex" role="search">
+              <input class="form-control mx-0" type="search" placeholder="Buscador" aria-label="Buscador">
+              <button class="btn btn-outline-success mx-3" type="submit">Buscar</button>
+            </form>
           </div>
         </div>
       </nav>
+
     </div>
 
     <div class="mainciclovias">
@@ -72,50 +91,47 @@
         <section>
 
           <div class="encabezado_ciclo">
-            <div class="container text-center">
-              <h1>Lugares que puedes visitar</h1>
-            </div>
+            <h1>Lugares que puedes visitar</h1>
           </div>
 
           <div class="parrafo_ciclo">
-            <div class="container text-center">
-              <p>
-                Montevideo, la capital de Uruguay, cuenta con una red de ciclovías que se ha ido desarrollando en los
-                últimos
-                años como parte de un plan de fomento de la movilidad sostenible y la promoción del uso de la bicicleta
-                como
-                medio de transporte. Algunas de las zonas donde puedes encontrar ciclovías en Montevideo son:
-              </p>
+            <p>
+              Montevideo, la capital de Uruguay, cuenta con una red de ciclovías que se ha ido desarrollando en los
+              últimos
+              años como parte de un plan de fomento de la movilidad sostenible y la promoción del uso de la bicicleta
+              como
+              medio de transporte. Algunas de las zonas donde puedes encontrar ciclovías en Montevideo son:
+            </p>
 
-              <p>
-                Rambla: La rambla de Montevideo es una avenida costera que rodea gran parte de la ciudad y cuenta con
-                una
-                ciclovía separada del tráfico vehicular. Es una de las áreas más populares para andar en bicicleta en
-                Montevideo, ya que ofrece un hermoso paisaje costero.
-              </p>
+            <p>
+              Rambla: La rambla de Montevideo es una avenida costera que rodea gran parte de la ciudad y cuenta con
+              una
+              ciclovía separada del tráfico vehicular. Es una de las áreas más populares para andar en bicicleta en
+              Montevideo, ya que ofrece un hermoso paisaje costero.
+            </p>
 
-              <p>
-                Parques: Varios parques de Montevideo, como el Parque Rodó y el Parque Rivera, tienen ciclovías internas
-                que
-                te permiten recorrerlos en bicicleta y disfrutar de áreas verdes.
-              </p>
+            <p>
+              Parques: Varios parques de Montevideo, como el Parque Rodó y el Parque Rivera, tienen ciclovías internas
+              que
+              te permiten recorrerlos en bicicleta y disfrutar de áreas verdes.
+            </p>
 
-              <p>
-                Avenidas principales: Algunas de las avenidas principales de Montevideo, como la Avenida 18 de Julio y
-                la
-                Avenida Rivera, cuentan con carriles exclusivos para bicicletas o ciclovías, que te permiten desplazarte
-                en
-                bicicleta de manera segura.
-              </p>
+            <p>
+              Avenidas principales: Algunas de las avenidas principales de Montevideo, como la Avenida 18 de Julio y
+              la
+              Avenida Rivera, cuentan con carriles exclusivos para bicicletas o ciclovías, que te permiten desplazarte
+              en
+              bicicleta de manera segura.
+            </p>
 
-              <p>
-                Barrios residenciales: En algunos barrios residenciales de Montevideo, como Pocitos y Punta Carretas, se
-                han
-                instalado ciclovías en calles secundarias o en áreas de recreación para fomentar el uso de la bicicleta
-                como
-                medio de transporte local.
-              </p>
-            </div>
+            <p>
+              Barrios residenciales: En algunos barrios residenciales de Montevideo, como Pocitos y Punta Carretas, se
+              han
+              instalado ciclovías en calles secundarias o en áreas de recreación para fomentar el uso de la bicicleta
+              como
+              medio de transporte local.
+            </p>
+          </div>
         </section>
       </main>
     </div>
@@ -123,7 +139,8 @@
     <div class="mapa">
       <section>
 
-        <iframe src="https://www.google.com/maps/d/embed?mid=1lDoxPneVj6DMtHdRSCESNz5o17mtX-Cq&ehbc=2E312F" width="580" height="400"></iframe>
+        <iframe src="https://www.google.com/maps/d/embed?mid=1lDoxPneVj6DMtHdRSCESNz5o17mtX-Cq&ehbc=2E312F" width="580"
+          height="400"></iframe>
 
       </section>
     </div>
@@ -131,34 +148,28 @@
     <div class="Footer">
       <footer>
 
-        <div class="parrafo_copy">
-          <p>Creado por Alvin Godoy</p>
-          <p>
-            Copyright 2023©
-          </p>
-        </div>
+        <p>Creado por Alvin Godoy</p>
+        <p>Copyright 2023©</p>
 
         <div class="redes_sociales">
-          <div class="container container text-center">
-            <a href="http://google.com" target="_blank" rel="noopener noreferrer"></a>
-            <a href="https://twitter.com/?lang=es"><img src="../multimedia/TW.png" alt="Logo twitter" width=""
-                height="70"></a>
-            <a href="https://es-la.facebook.com/"> <img src="../multimedia/FB.png" alt=Logo Facebook" width=""
-                height="70"></a>
-            <a href="https://www.instagram.com/"> <img src="../multimedia/insta.png" alt="Logo instagram" width=""
-                height="70"></a>
-            <!-- Links de fuentes, copiados google fonts -->
+          <a href="http://google.com" target="_blank" rel="noopener noreferrer"></a>
+          <a href="https://twitter.com/?lang=es"><img src="../multimedia/TW.png" alt="Logo twitter" width=""
+              height="70"></a>
+          <a href="https://es-la.facebook.com/"> <img src="../multimedia/FB.png" alt=Logo Facebook" width=""
+              height="70"></a>
+          <a href="https://www.instagram.com/"> <img src="../multimedia/insta.png" alt="Logo instagram" width=""
+              height="70"></a>
+          <!-- Links de fuentes, copiados google fonts -->
 
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+          <link rel="preconnect" href="https://fonts.googleapis.com">
+          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+          <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
 
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link
-              href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Sedgwick+Ave+Display&display=swap"
-              rel="stylesheet">
-          </div>
+          <link rel="preconnect" href="https://fonts.googleapis.com">
+          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+          <link
+            href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Sedgwick+Ave+Display&display=swap"
+            rel="stylesheet">
         </div>
 
       </footer>
