--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Ciclo Vias</title>
+  <title>Contacto</title>
 
   <link rel="shortcut icon" href="../multimedia/logobici.png" />
 
@@ -38,101 +38,115 @@
         class="logo animate__animated animate__backInLeft" />
 
       <div class="titulo_logo">
-            <p class="logo animate__animated animate__zoomIn">Move my Bike </p>
-          </div>
-      
+        <p class="logo animate__animated animate__zoomIn">Move my Bike </p>
+      </div>
+
     </header>
   </div>
 
   <div class="Nav">
-    <nav class="menu justify-content">
 
-      <!-- lista inicio -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <button class="navbar-toggler mx-auto" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+          aria-label="Toggle navigation">
+          Menu
+          <span class="navbar-toggler-icon "></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/ciclovias.html">Ciclo Vias</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/paseos.html">Paseos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/acercadeventaarticulos.html">Acerca de Ventas Articulos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../paginas/contacto.html">Contacto</a>
+            </li>
 
-      <div class="container text-center">
-        <div class="row justify-content-start">
-
-          <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="../paginas/ciclovias.html">Ciclo Vias</a></li>
-            <li><a href="../paginas/paseos.html">Paseos</a></li>
-            <li><a href="../paginas/acercadeventaarticulos.html">Acerca de Ventas Articulos</a></li>
-            <li><a href="paginas/contacto.html">Contacto</a></li>
           </ul>
-
+          <form class="d-flex" role="search">
+            <input class="form-control mx-0" type="search" placeholder="Buscador" aria-label="Buscador">
+            <button class="btn btn-outline-success mx-3" type="submit">Buscar</button>
+          </form>
         </div>
       </div>
-
     </nav>
+
   </div>
 
   <div class="main_contacto">
     <main>
-      <section class="contacto row">
+      <section>
         <img src="../multimedia/contacto.avif" alt="Imagen ilustrativa">
       </section>
     </main>
   </div>
 
-  <div>
 
-    <div class=" formulario">
-      <h1 class="contenido">Cuentanos tu experiencia</h1>
+  <div class=" formulario">
+    <h1 class="contenido">Cuentanos tu experiencia</h1>
 
-      <form class="forms">
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Dirección de correo electrónico</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <div id="emailHelp" class="form-text">Nunca compartiremos tu correo electrónico con nadie más.</div>
-        </div>
-        <div class="mb-3">
-          <label for="exampleFormControlTextarea1" class="form-label">Casilla de sugerencias</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Seleccionar</label>
-        </div>
+    <form class="forms">
+      <div class="mx-3">
+        <label for="exampleInputEmail1" class="form-label">Dirección de correo electrónico</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">Nunca compartiremos tu correo electrónico con nadie más.</div>
+      </div>
+      <div class="mx-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Dejanos tu comentario</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+      <div class="mx-3 form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Aceptar</label>
+      </div>
+      <div class="mx-3">
         <button type="submit" class="btn btn-primary">Enviar</button>
-      </form>
+      </div>
+    </form>
 
-    </div>
+  </div>
 
-    <div class="Footer">
-      <footer>
+  <div class="Footer">
+    <footer>
 
-        <div class="container text-center">
-          <p>Creado por Alvin Godoy</p>
-          <p>
-            Copyright 2023©
-          </p>
-        </div>
+      <p>Creado por Alvin Godoy</p>
+      <p>
+        Copyright 2023©
+      </p>
 
-        <div class="redes_sociales">
-          <div class="container container text-center">
-            <a href="http://google.com" target="_blank" rel="noopener noreferrer"></a>
-            <a href="https://twitter.com/?lang=es"><img src="../multimedia/TW.png" alt="Logo twitter" width=""
-                height="70"></a>
-            <a href="https://es-la.facebook.com/"> <img src="../multimedia/FB.png" alt=Logo Facebook" width=""
-                height="70"></a>
-            <a href="https://www.instagram.com/"> <img src="../multimedia/insta.png" alt="Logo instagram" width=""
-                height="70"></a>
-            <!-- Links de fuentes, copiados google fonts -->
+      <div class="redes_sociales">
+        <a href="http://google.com" target="_blank" rel="noopener noreferrer"></a>
+        <a href="https://twitter.com/?lang=es"><img src="../multimedia/TW.png" alt="Logo twitter" width=""
+            height="70"></a>
+        <a href="https://es-la.facebook.com/"> <img src="../multimedia/FB.png" alt=Logo Facebook" width=""
+            height="70"></a>
+        <a href="https://www.instagram.com/"> <img src="../multimedia/insta.png" alt="Logo instagram" width=""
+            height="70"></a>
+        <!-- Links de fuentes, copiados google fonts -->
 
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
 
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link
-              href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Sedgwick+Ave+Display&display=swap"
-              rel="stylesheet">
-          </div>
-        </div>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+          href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Sedgwick+Ave+Display&display=swap"
+          rel="stylesheet">
+      </div>
 
-      </footer>
-    </div>
+    </footer>
+  </div>
 
 </body>
 
