--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <main>
       <section class="contenido row">
 
-        <div class="encabezado_titulo">
+        <div class="encabezado_tituloo">
           <div class="container text-center">
             <h1>Move my Bike: Explora la ciudad en bicicleta</h1>
           </div>
